// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeterministicArchivist find with schema for BoundWitness finds multiple bws 1`] = `
[
  {
    "addresses": [
      "24b29022e9ff73386ec5ec091922af9a19c85aa9",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
      "1c9033e467d6877e2c84a70b29212a585bd6fd448bccfcc12adf0505c18984f6",
    ],
    "payload_schemas": [
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "09ced28aa0b6390f5afe91c19d2279dc99abc42f0664d950b4bd98d02da6c7b3",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "24b29022e9ff73386ec5ec091922af9a19c85aa9",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      "0dfa4c887d7e0e5a94b47a0797721899e805ad965c3eb3f7e32979258bb83a51",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist find with schema for Payload finds single payload 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist get gets multiple payloads 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
  {
    "nonce": 2,
    "schema": "network.xyo.test",
  },
]
`;

exports[`DeterministicArchivist get gets single payload 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist insert inserts multiple payloads 1`] = `
[
  {
    "addresses": [
      "46553499c8ca45a44c7dbb88fbc844390183a069",
      "b6f91606ba4e865378c7f20ec838aa6033e15393",
    ],
    "payload_hashes": [
      "76ce55af352c59710bb5ee0bf8efc329570d717f93b99e5e3c62637fb0618eb6",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "68535fbf9520f47a95ee879368ce5a67995d8632598826c48e44c9d430ba2a01",
      "68535fbf9520f47a95ee879368ce5a67995d8632598826c48e44c9d430ba2a01",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "24b29022e9ff73386ec5ec091922af9a19c85aa9",
    ],
    "payload_hashes": [
      "27e2dd0047bfc37d59e70047edda9f9c980a3741771673f69be293bd651dbd0c",
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
      "a1981d6f2764bc44ebf8fbc65316ab4b5b55a71ced27a7d6d3f9f99004bc08d6",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.test",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      "aea63aca6258131c78dc0658f0ad95e52cbacf5c836cfaf78802150ff13c5aea",
    ],
    "query": "a1981d6f2764bc44ebf8fbc65316ab4b5b55a71ced27a7d6d3f9f99004bc08d6",
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist insert inserts single payload 1`] = `
[
  {
    "addresses": [
      "46553499c8ca45a44c7dbb88fbc844390183a069",
      "b6f91606ba4e865378c7f20ec838aa6033e15393",
    ],
    "payload_hashes": [
      "05e145cf013fc0b81e5ce049585ef9ef5ab89e2dbbd9a114698b00f7adc8bd46",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      null,
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "24b29022e9ff73386ec5ec091922af9a19c85aa9",
    ],
    "payload_hashes": [
      "719ee16700faa99ca451d44f9794304ce619d1ae02d5b69cd2203bbdc34c4602",
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
      "3cfaf6ed37e81cb2d76c46b41ab37325e81abc329b020ba84514f0c85770ef95",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      "27e2dd0047bfc37d59e70047edda9f9c980a3741771673f69be293bd651dbd0c",
    ],
    "query": "3cfaf6ed37e81cb2d76c46b41ab37325e81abc329b020ba84514f0c85770ef95",
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;
